[package]
name = "quotation-align"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
deunicode = "1.6.0"
float_next_after = "1.0.0"
glob = "0.3.2"
once_cell = "1.20.2"
ordered-float = "4.6.0"
pathfinding = "4.13.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
triple_accel = "0.4.0"
